lighter box-shadows + fixes double borders in top-titles

--- a/static/css/toh.css
+++ b/static/css/toh.css
@@ -2,7 +2,6 @@
 ##### Enclosing Page ###################################################################################
 ######################################################################################################## */
 
-
 /* ---------------------------------------------------------- */
 html, body {
 	height: 100%;
@@ -27,9 +26,7 @@ html, body {
 	background: rgb(0, 163, 225);
 	border-bottom: 1px solid #999;
 	margin-bottom: 20px;
-	box-shadow: 0em 0.125em 0.25em -0.06em rgba(0, 0, 0, 0.2),
-		0em 0.25em 0.3em 0em rgba(0, 0, 0, 0.14),
-		0em 0.06em 0.625em 0em rgba(0, 0, 0, 0.12);
+	box-shadow: 0px 2px 8px 2px rgba(0,0,0,.15);
 }
 
 #toh-header,
@@ -69,6 +66,7 @@ html, body {
 	left: 50%;
 	transform: translateX(50%) translateY(50%);
 	background-color: #F00;
+	box-shadow: 2px 2px 12px 3px rgba(0,0,0,.3);
 }
 
 #toh-header-count{
@@ -282,11 +280,9 @@ body,
 	border-color: #ccc;
 	border-radius: 4px;
 	background: #fff;
-	box-shadow: 0em 0.06em 0.19em 0em rgba(0, 0, 0, 0.2),
-		0em 0.06em 0.1em 0em rgba(0, 0, 0, 0.14),
-		0em 0.125em 0.13em 0em rgba(0, 0, 0, 0.12);
-	/* transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; */
-	/* border: 1px solid #eee; */
+	border: 1px solid rgba(0,0,0,.15);
+	box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.05);
+
 }
 
 #toh-main{
@@ -394,12 +390,9 @@ body,
 }
 .toh-top-block{
 	font-size: 13px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
-.toh-top-container{
-	padding: 8px 10px 5px 25px;
-	font-size: 13px;
-}
+
 .toh-top-title{
 	padding-left: 10px;
 	border: 1px solid #ddd;
@@ -407,7 +400,16 @@ body,
 	border-style: solid;	
 	background-color: #f5f5f5;
 	overflow: hidden;
-} 
+}
+
+#toh-top-filters .toh-top-title{
+	border-top: 0;
+}
+.toh-top-container{
+	padding: 8px 10px 5px 25px;
+	font-size: 13px;
+}
+
 .toh-title{
 	padding-right: 10px;
 }
@@ -430,6 +432,9 @@ body,
 	text-decoration: none;
 	background-color: #fff;	
 	border-right: 1px solid #ddd;
+}
+.toh-top-title-presets A:last-child{
+	border-right: 0;
 }
 .toh-upresets-content A{
 	/* background-color: #fbf7f0; */
